# exercise-companion

./: .dockerignore  .env  Dockerfile  README.md  claude.md  main.py  pyproject.toml
app/: config.py  database.py  main.py
app/models/: schemas.py
app/routers/: autocomplete.py  exercises.py  import_data.py  visualizer.py  workout_summary.py
app/services/: aggregation.py
app/templates/: base.html  index.html
app/templates/partials/: autocomplete_results.html  edit_modal.html  edit_success.html  form_success.html  import_form.html  import_success.html  logger_form.html  logger_form_inner.html  tabs.html  visualizer.html  visualizer_autocomplete.html  visualizer_search.html  visualizer_table.html  workout_summary.html
